feat: allow configuration of dirty values behavior and export options
[BREAKING CHANGE]: documents `Export` function signature
- Added a new method: documents `Index` to avoid  breaking changes in `Create` & `Upsert` function signatures
